--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -1,15 +1,15 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-primary mb-4">
     <div class="container">
-        <a class="navbar-brand" href="#">{{title}}</a>
+        <a class="navbar-brand" [routerLink]="['/home']"  >{{title}}</a>
         <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Matches</a>
+            <li class="nav-item active" routerLinkActive="active">
+                <a class="nav-link" [routerLink]="['/members']">Matches</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Lists</a>
+            <li class="nav-item"  routerLinkActive="active">
+                <a class="nav-link" [routerLink]="['/list']">Lists</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link " href="#">Messages</a>
+            <li class="nav-item"  routerLinkActive="active">
+                <a class="nav-link" [routerLink]="['/messages']">Messages</a>
             </li>
         </ul>
         <div *ngIf="loggedIn()" class="dropdown" dropdown>
