--- a/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/members/member-edit/member-edit.component.html
@@ -4,13 +4,14 @@
       <h1>Your Profile</h1>
     </div>
     <div class="col-sm-8">
-      <div *ngIf="editForm.dirty" class="alert alert-info"><strong>Information:</strong> You have made changes. Any unsaved changes will be lost!</div>
+      <div *ngIf="editForm.dirty" class="alert alert-info"><strong>Information:</strong> You have made changes. Any
+        unsaved changes will be lost!</div>
     </div>
   </div>
   <div class="row">
     <div class="col-sm-4">
       <div class="card">
-        <img class="card-img-top img-thumbnail" src="{{user.photoUrl}}" alt="{{user.knownAs}}">
+        <img class="card-img-top img-thumbnail" src="{{photoUrl}}" alt="{{user.knownAs}}">
         <div class="card-body">
           <div>
             <strong>Location:</strong>
@@ -30,7 +31,8 @@
           </div>
         </div>
         <div class="card-footer">
-          <button [disabled]='!editForm.dirty' form="editForm" class="btn btn-success btn-block w-100">Save Changes</button>
+          <button [disabled]='!editForm.dirty' form="editForm" class="btn btn-success btn-block w-100">Save
+            Changes</button>
         </div>
       </div>
     </div>
@@ -55,6 +57,8 @@
             </form>
           </tab>
           <tab heading="Edit Photos">
+            <app-photo-editor [photos]="user.photos" (getMemberPHotoChange)="updateMainPhoto($event)">
+            </app-photo-editor>
           </tab>
         </tabset>
       </div>
