--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-4">
       <div class="card">
-        <img class="card-img-top img-thumbnail" src="{{user.photoUrl}}" alt="{{user.knownAs}}">
+        <img class="card-img-top img-thumbnail" src="{{user.photoUrl || '../../../assets/user.png'}}" alt="{{user.knownAs}}">
         <div class="card-body">
           <div>
             <strong>Location:</strong>
@@ -43,7 +43,7 @@
             <p>{{user.interests}}</p>
           </tab>
           <tab heading="Photos">
-            <h4>Photos Will go here</h4>
+            <h4>Photos</h4>
             <ngx-gallery [options] = "galleryOptions" [images] = "galleryImages" class = "ngx-gallery" > </ngx-gallery> 
           </tab>
           <tab heading="Messages">
